<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fzn.projects.networkstatistics.RuleOperationActivity" >

    <ScrollView
        android:id="@+id/addRuleScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top|center"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ruleNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruleName"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/ruleNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint=""
                android:inputType="text"
                android:singleLine="true"
                android:tag="@string/ruleName" />

            <TextView
                android:id="@+id/networkTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Spinner
                android:id="@+id/networkSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/networkConnection" />

            <TextView
                android:id="@+id/totalDataTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dataTotal"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/totalDataInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="500"
                    android:inputType="number"
                    android:singleLine="true"
                    android:tag="@string/ruleItemTotal" />

                <Spinner
                    android:id="@+id/totalUnitSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/dataUnit" />

            </LinearLayout>

            <TextView
                android:id="@+id/usedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dataUsed"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/usedDataInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="0"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:tag="@string/ruleItemUsed" />

                <Spinner
                    android:id="@+id/usedUnitSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/dataUnit" />

            </LinearLayout>

            <TextView
                android:id="@+id/periodTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruleItemPeriod"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/periodInput"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="1"
                    android:inputType="date"
                    android:singleLine="true"
                    android:tag="@string/ruleItemPeriod" />

                <Spinner
                    android:id="@+id/periodUnitSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:entries="@array/timeUnit" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rulePriority"
                android:id="@+id/priorityTitle" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/priorityInput"
                android:hint="@string/rulePriorityHint" />

            <TextView
                android:id="@+id/timeIntervalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruleTimeInterval"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/timeIntervalRadioGroup">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rangeAllDay"
                    android:id="@+id/allDayRadio"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rangePartial"
                    android:id="@+id/partialTimeRadio" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="fill_horizontal"
                android:orientation="vertical"
                android:id="@+id/timeIntervalLayout">

                <TimePicker
                    android:id="@+id/beginTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:timePickerMode="spinner" />

                <TextView
                    android:id="@+id/line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal|center"
                    android:text="|"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TimePicker
                    android:id="@+id/endTimePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center"
                    android:timePickerMode="spinner" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancelRuleButton"
            style="android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addRuleCancel"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/okRuleButton"
            style="android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addRuleOk"
            android:text="@android:string/ok" />

    </LinearLayout>

</LinearLayout>