<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="No."
        android:id="@+id/ruleId"
        android:textSize="@dimen/rule_id_font_size" />

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/ruleId">

        <TextView
            android:id="@+id/ruleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RelativeLayout
            android:id="@+id/totalLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ruleName"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruleItemTotal"
                android:id="@+id/totalDataTitle" />

            <TextView
                android:id="@+id/totalData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/totalDataTitle"
                android:text="" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/remainLine"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/totalLine">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruleItemRemain"
                android:id="@+id/remainDataTitle" />

            <TextView
                android:id="@+id/remainData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/remainDataTitle"
                android:text="" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/usedLine"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/remainLine">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruleItemUsed"
                android:id="@+id/usedDataTitle" />

            <TextView
                android:id="@+id/usedData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/usedDataTitle"
                android:text="" />

        </RelativeLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usedLine">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rulePriority2"
                android:id="@+id/priorityTitle2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/priorityTitle2"
                android:id="@+id/rulePriority"
                android:text="" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>
